--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -37,6 +37,7 @@ services:
       retries: 5
 
   backend:
+    image: ghcr.io/cybedefend/dashwright/backend:latest
     build:
       context: ./backend
       dockerfile: Dockerfile
@@ -72,6 +73,7 @@ services:
     restart: unless-stopped
 
   frontend:
+    image: ghcr.io/cybedefend/dashwright/frontend:latest
     build:
       context: ./frontend
       dockerfile: Dockerfile
