--- a/integrations/npm-package/package.json
+++ b/integrations/npm-package/package.json
@@ -6,6 +6,14 @@
   "license": "Apache-2.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/CybeDefend/dashwright.git",
+    "directory": "integrations/npm-package"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
   "engines": {
     "node": ">=22.14.0",
     "pnpm": ">=10.0.0"
