--- a/integrations/npm-package/.npmrc
+++ b/integrations/npm-package/.npmrc
@@ -1,2 +1,2 @@
-@dashwright:registry=https://npm.pkg.github.com
-//npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}
+# Public npmjs.org registry (default)
+# Run 'npm login' before publishing
