Make storage limit configurable via STORAGE_LIMIT_GB
Added STORAGE_LIMIT_GB to environment variables and docker-compose configuration. Updated storage service and admin controller to use the configured storage limit instead of a hardcoded value, allowing dynamic adjustment of storage capacity.

--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,7 @@ STORAGE_USE_SSL=false
 STORAGE_ACCESS_KEY=minioadmin
 STORAGE_SECRET_KEY=minioadmin
 STORAGE_BUCKET=dashwright-artifacts
+STORAGE_LIMIT_GB=100
 
 # CORS Configuration
 CORS_ORIGIN=http://localhost:5173
