Add Helm chart and release workflow for Dashwright
Introduces a Helm chart for Dashwright with supporting files, documentation, and configuration. Adds a GitHub Actions workflow for chart release, Artifact Hub metadata, and a publish script. Updates main README with Helm installation instructions and badges.

--- a/helm-chart/Chart.yaml
+++ b/helm-chart/Chart.yaml
@@ -14,3 +14,5 @@ sources:
   - https://github.com/CybeDefend/Dashwright
 maintainers:
   - name: CybeDefend
+    email: florentin.ledy@cybedefend.com
+license: Apache-2.0
