--- a/.github/workflows/release-helm-chart.yml
+++ b/.github/workflows/release-helm-chart.yml
@@ -27,6 +27,48 @@ jobs:
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
+      - name: Check if gh-pages branch exists
+        id: check-branch
+        run: |
+          if git ls-remote --heads origin gh-pages | grep gh-pages; then
+            echo "exists=true" >> $GITHUB_OUTPUT
+          else
+            echo "exists=false" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Create gh-pages branch if it doesn't exist
+        if: steps.check-branch.outputs.exists == 'false'
+        run: |
+          git checkout --orphan gh-pages
+          git reset --hard
+          cat > README.md << 'EOF'
+          # Dashwright Helm Charts
+
+          This repository hosts Helm charts for Dashwright.
+
+          ## Usage
+
+          ```bash
+          helm repo add dashwright https://cybedefend.github.io/dashwright
+          helm repo update
+          helm install dashwright dashwright/dashwright
+          ```
+
+          ## Available Charts
+
+          - **dashwright**: Modern Playwright dashboard for visualizing test runs
+
+          For more information, visit the [main repository](https://github.com/CybeDefend/dashwright).
+          EOF
+          git add README.md
+          git commit -m "Initialize gh-pages branch"
+          git push origin gh-pages
+
+      - name: Checkout main branch
+        if: steps.check-branch.outputs.exists == 'false'
+        run: |
+          git checkout main
+
       - name: Install Helm
         uses: azure/setup-helm@v3
         with:
