--- a/.github/workflows/release-helm-chart.yml
+++ b/.github/workflows/release-helm-chart.yml
@@ -87,6 +87,7 @@ jobs:
     permissions:
       pages: write
       id-token: write
+      contents: write
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
@@ -95,6 +96,33 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: gh-pages
+
+      - name: Update version in index.html
+        run: |
+          # Extract version from Chart.yaml in the release
+          CHART_VERSION=$(curl -s https://api.github.com/repos/${{ github.repository }}/releases/latest | jq -r '.tag_name' | sed 's/dashwright-//')
+
+          if [ -z "$CHART_VERSION" ] || [ "$CHART_VERSION" == "null" ]; then
+            echo "Could not extract version from latest release, using version from index.yaml"
+            CHART_VERSION=$(grep -A 5 "name: dashwright" index.yaml | grep "version:" | head -1 | awk '{print $2}')
+          fi
+
+          echo "Updating index.html to version $CHART_VERSION"
+
+          # Update the badge version in index.html
+          sed -i "s/v[0-9]\+\.[0-9]\+\.[0-9]\+/v$CHART_VERSION/g" index.html
+
+          # Check if there are changes
+          if git diff --quiet index.html; then
+            echo "No changes to index.html"
+          else
+            git config user.name "$GITHUB_ACTOR"
+            git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+            git add index.html
+            git commit -m "chore: update index.html to version $CHART_VERSION"
+            git push origin gh-pages
+            echo "index.html updated to version $CHART_VERSION"
+          fi
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
