Add S3-compatible storage support and docs
Replaced MinIO-specific storage implementation with S3-compatible support using AWS SDK. Updated environment examples, documentation, and configuration files to support MinIO, AWS S3, Scaleway, and other providers. Added detailed STORAGE.md guide and example configs for various providers. Removed CHANGELOG.md and MinIO dependency.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,7 +3,7 @@ NODE_ENV=development
 PORT=3000
 
 # Database Configuration
-DB_HOST=postgres
+DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=dashwright
 DB_PASSWORD=changeme
@@ -16,18 +16,25 @@ JWT_REFRESH_SECRET=your-super-secret-refresh-key-change-this-in-production
 JWT_REFRESH_EXPIRES_IN=7d
 
 # Storage Configuration (S3-compatible)
-# Works with MinIO, AWS S3, Scaleway, DigitalOcean Spaces, etc.
-# For MinIO: http://minio:9000 (or http://localhost:9000 for local dev)
-# For AWS S3: leave empty
-# For Scaleway: https://s3.fr-par.scw.cloud
-STORAGE_ENDPOINT=http://minio:9000
+# Works with MinIO, AWS S3, Scaleway Object Storage, DigitalOcean Spaces, Backblaze B2, etc.
+
+# S3 Endpoint URL (leave empty for AWS S3)
+# The region is already included in the endpoint for S3-compatible providers
+# Examples:
+#   MinIO (local): http://localhost:9000
+#   AWS S3: (empty - uses AWS default endpoints)
+#   Scaleway: https://s3.fr-par.scw.cloud (region: fr-par)
+#   DigitalOcean: https://nyc3.digitaloceanspaces.com (region: nyc3)
+STORAGE_ENDPOINT=http://localhost:9000
+
+# AWS Region (only needed for AWS S3, ignored for S3-compatible providers)
+STORAGE_REGION=us-east-1
+
+# S3 Access credentials
 STORAGE_ACCESS_KEY=minioadmin
 STORAGE_SECRET_KEY=minioadmin
 STORAGE_BUCKET=dashwright-artifacts
 STORAGE_LIMIT_GB=100
-
-# Optional: Only needed for AWS S3 (ignored for S3-compatible providers)
-STORAGE_REGION=us-east-1
 
 # CORS Configuration
 CORS_ORIGIN=http://localhost:5173
@@ -35,7 +42,3 @@ CORS_ORIGIN=http://localhost:5173
 # Rate Limiting
 RATE_LIMIT_TTL=60
 RATE_LIMIT_MAX=10
-
-# Frontend Configuration
-VITE_API_URL=http://localhost:3000
-VITE_WS_URL=ws://localhost:3000
