--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,8 @@
     "migration:revert": "pnpm run typeorm -- migration:revert -d src/config/data-source.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.936.0",
+    "@aws-sdk/s3-request-presigner": "^3.936.0",
     "@nestjs/common": "^11.1.9",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.9",
@@ -38,7 +40,6 @@
     "argon2": "^0.44.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
-    "minio": "^8.0.6",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
