--- a/helm-chart/Chart.yaml
+++ b/helm-chart/Chart.yaml
@@ -19,10 +19,10 @@ license: Apache-2.0
 
 dependencies:
   - name: postgresql
-    version: "15.x.x"
+    version: "16.2.1"
     repository: https://charts.bitnami.com/bitnami
     condition: postgresql.enabled
   - name: minio
-    version: "14.x.x"
+    version: "14.8.6"
     repository: https://charts.bitnami.com/bitnami
     condition: minio.enabled
