--- a/.github/workflows/release-helm-chart.yml
+++ b/.github/workflows/release-helm-chart.yml
@@ -80,17 +80,12 @@ jobs:
           charts_dir: .
           skip_existing: true
 
-  # Deploy to GitHub Pages
-  deploy-pages:
+  # Update index.html version
+  update-index:
     runs-on: ubuntu-latest
     needs: release
     permissions:
-      pages: write
-      id-token: write
       contents: write
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - name: Checkout gh-pages branch
         uses: actions/checkout@v4
@@ -123,15 +118,3 @@ jobs:
             git push origin gh-pages
             echo "index.html updated to version $CHART_VERSION"
           fi
-
-      - name: Setup Pages
-        uses: actions/configure-pages@v4
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: "."
-
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
