Add Helm chart release option to release script
Introduces a dedicated release_helm function in scripts/release.sh to support releasing Helm charts independently. Updates the release menu to include Helm chart release, adjusts menu numbering, and improves git tagging to create both Docker and Helm chart tags. Also updates GitHub workflow triggers to align with new release process.

--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -1,9 +1,10 @@
 name: Deploy Helm Chart to GitHub Pages
 
 on:
-  push:
-    branches:
-      - gh-pages
+  # Disabled - now handled by release-helm-chart.yml
+  # push:
+  #   branches:
+  #     - gh-pages
   workflow_dispatch:
 
 permissions:
