--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -39,4 +39,4 @@ COPY --from=builder /app/dist ./dist
 EXPOSE 3000
 
 # Start application
-CMD ["node", "dist/main.js"]
+CMD ["node", "dist/src/main.js"]
