Replace chart dependencies with custom StatefulSets
Removed Bitnami Minio and PostgreSQL chart dependencies from Chart.yaml and added custom StatefulSet templates for both services. Updated secret templates to handle internal/external credentials and added image configuration to values.yaml. This change provides more control over deployment and configuration of Minio and PostgreSQL within the Helm chart.

--- a/helm-chart/templates/minio-secret.yaml
+++ b/helm-chart/templates/minio-secret.yaml
@@ -1,4 +1,3 @@
-{{- if not .Values.minio.enabled }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -8,5 +7,8 @@ metadata:
     app.kubernetes.io/instance: {{ .Release.Name }}
 type: Opaque
 stringData:
+  {{- if .Values.minio.enabled }}
+  root-password: {{ .Values.minio.auth.rootPassword | quote }}
+  {{- else }}
   root-password: {{ .Values.storage.secretKey | quote }}
-{{- end }}
+  {{- end }}
