--- a/helm-chart/templates/postgresql-secret.yaml
+++ b/helm-chart/templates/postgresql-secret.yaml
@@ -1,4 +1,3 @@
-{{- if not .Values.postgresql.enabled }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -8,5 +7,8 @@ metadata:
     app.kubernetes.io/instance: {{ .Release.Name }}
 type: Opaque
 stringData:
+  {{- if .Values.postgresql.enabled }}
+  password: {{ .Values.postgresql.auth.password | quote }}
+  {{- else }}
   password: {{ .Values.postgresql.external.password | quote }}
-{{- end }}
+  {{- end }}
