--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -76,6 +76,10 @@ autoscaling:
 
 postgresql:
   enabled: true
+  image:
+    repository: postgres
+    tag: "16-alpine"
+    pullPolicy: Always
   auth:
     username: dashwright
     password: changeme
@@ -84,6 +88,7 @@ postgresql:
     persistence:
       enabled: true
       size: 10Gi
+      # storageClass: ""
   # External PostgreSQL configuration (when enabled: false)
   external:
     host: "external-postgres.example.com"
@@ -94,12 +99,17 @@ postgresql:
 
 minio:
   enabled: true
+  image:
+    repository: minio/minio
+    tag: "RELEASE.2025-09-07T16-13-09Z"
+    pullPolicy: Always
   auth:
     rootUser: minioadmin
     rootPassword: minioadmin
   persistence:
     enabled: true
     size: 50Gi
+    # storageClass: ""
   defaultBuckets: "dashwright-artifacts"
 
 # Storage configuration (S3-compatible)
