Update image tags and refine release script
Changed PostgreSQL and MinIO image tags in values.yaml to newer versions. Modified release.sh to update only backend and frontend image tags in values.yaml, improving version update precision for both macOS and Linux.

--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -78,7 +78,7 @@ postgresql:
   enabled: true
   image:
     repository: postgres
-    tag: "1.2.11"
+    tag: "16-alpine"
     pullPolicy: Always
   auth:
     username: dashwright
@@ -101,7 +101,7 @@ minio:
   enabled: true
   image:
     repository: minio/minio
-    tag: "1.2.11"
+    tag: "RELEASE.2025-09-07T16-13-09Z"
     pullPolicy: Always
   auth:
     rootUser: minioadmin
