Add configurable frontend API and WebSocket URLs
Introduces environment variable support for VITE_API_URL and VITE_WS_URL in the frontend Docker image via a new entrypoint script. Updates Helm chart templates, values, and documentation to allow external configuration of API and WebSocket URLs for frontend deployments, improving flexibility for ingress and public access scenarios.

--- a/helm-chart/templates/frontend-deployment.yaml
+++ b/helm-chart/templates/frontend-deployment.yaml
@@ -28,6 +28,11 @@ spec:
         - name: http
           containerPort: 80
           protocol: TCP
+        env:
+        - name: VITE_API_URL
+          value: {{ .Values.frontend.apiUrl | default (printf "http://%s-backend:3000" (include "dashwright.fullname" .)) | quote }}
+        - name: VITE_WS_URL
+          value: {{ .Values.frontend.wsUrl | default (printf "ws://%s-backend:3000" (include "dashwright.fullname" .)) | quote }}
         livenessProbe:
           httpGet:
             path: /
