--- a/helm-chart/values-scaleway.yaml
+++ b/helm-chart/values-scaleway.yaml
@@ -31,6 +31,11 @@ postgresql:
     password: "your-secure-password"
     database: "dashwright"
 
+# Configure frontend URLs for external access
+frontend:
+  apiUrl: "https://dashwright.example.com"  # Your public domain
+  wsUrl: "wss://dashwright.example.com"     # WebSocket URL
+
 # Configure ingress for production
 ingress:
   enabled: true
