--- a/helm-chart/templates/postgresql-secret.yaml
+++ b/helm-chart/templates/postgresql-secret.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.postgresql.auth.existingSecret }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -12,3 +13,4 @@ stringData:
   {{- else }}
   password: {{ .Values.postgresql.external.password | quote }}
   {{- end }}
+{{- end }}
