--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -52,6 +52,16 @@ ingress:
     #   hosts:
     #     - dashwright.local
 
+# Backend configuration
+backend:
+  # CORS origin - set to your frontend URL for production
+  # Use "*" to allow all origins (not recommended for production)
+  # For multiple origins, the backend needs to be updated to support array
+  corsOrigin: "*"
+  # JWT secrets - reference to existing secret containing jwt-secret and jwt-refresh-secret keys
+  # If not set, JWT_SECRET and JWT_REFRESH_SECRET must be provided in env.backend
+  jwtExistingSecret: ""
+
 # Frontend configuration
 frontend:
   # API URL - defaults to internal backend service if not specified
@@ -92,6 +102,9 @@ postgresql:
     username: dashwright
     password: changeme
     database: dashwright
+    # Reference to existing secret containing password key
+    # If set, password above is ignored
+    existingSecret: ""
   primary:
     persistence:
       enabled: true
@@ -136,8 +149,12 @@ storage:
 
   # S3 credentials (used when minio.enabled=false)
   # When minio.enabled=true, these are ignored and MinIO credentials are used
+  # Option 1: Direct values (not recommended for production)
   accessKey: ""
   secretKey: ""
+  # Option 2: Reference to existing secret containing access-key and secret-key keys
+  # If set, accessKey and secretKey above are ignored
+  existingSecret: ""
 
   # Bucket name
   bucket: "dashwright-artifacts"
