Add frontendUrl config for backend invitation links
Introduces a new backend.frontendUrl parameter to Helm chart values and deployment template, allowing the public frontend URL to be set for use in invitation emails. Updates documentation and example values files to reflect this new configuration option.

--- a/helm-chart/templates/backend-deployment.yaml
+++ b/helm-chart/templates/backend-deployment.yaml
@@ -32,6 +32,9 @@ spec:
         # CORS configuration
         - name: CORS_ORIGIN
           value: {{ .Values.backend.corsOrigin | default "*" | quote }}
+        # Frontend URL for invitation links
+        - name: FRONTEND_URL
+          value: {{ .Values.backend.frontendUrl | default (printf "http://%s-frontend" (include "dashwright.fullname" .)) | quote }}
         # JWT secrets
         {{- if .Values.backend.jwtExistingSecret }}
         - name: JWT_SECRET
