--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -54,6 +54,9 @@ ingress:
 
 # Backend configuration
 backend:
+  # Frontend URL - used for invitation links
+  # Set this to your public frontend URL (e.g., https://dashwright.example.com)
+  frontendUrl: ""
   # CORS origin - set to your frontend URL for production
   # Use "*" to allow all origins (not recommended for production)
   # For multiple origins, the backend needs to be updated to support array
